// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextContainer with data should render correctly 1`] = `
<React.Fragment>
  <Blocks
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 1st paragraph block.",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 2nd paragraph block.",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 3rd paragraph block.",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 4th paragraph block..",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 5th paragraph block.",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
      ]
    }
    componentsToRender={
      Object {
        "paragraph": [Function],
      }
    }
  />
</React.Fragment>
`;

exports[`TextContainer with data with a passed previous block type should render correctly 1`] = `
<React.Fragment>
  <hr />
  <Blocks
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 1st paragraph block.",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 2nd paragraph block.",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 3rd paragraph block.",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 4th paragraph block..",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "attributes": Array [],
                  "text": "This is a 5th paragraph block.",
                },
                "type": "fragment",
              },
            ],
          },
          "type": "paragraph",
        },
      ]
    }
    componentsToRender={
      Object {
        "paragraph": [Function],
      }
    }
  />
</React.Fragment>
`;
